--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <!-- Bootstrap CSS and JS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="EasyAutocomplete-1.3.5/easy-autocomplete.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+    <script src="EasyAutocomplete-1.3.5/jquery.easy-autocomplete.min.js"></script>
+
+    <script type="text/javascript" src="champions.js"></script>
+    <script type="text/javascript" src="config.js"></script>
     <script src="script.js"></script>
     <title>Hello, world!</title>
   </head>
@@ -19,6 +29,16 @@
                 <h1 class="display-6 text-center">Just check the chart.</h1>
             </div>
         </row>
+        <div class="row">
+          <div class="col-lg-6">
+            <form>
+              <div class="autocomplete" style="width:300px;">
+                <input id="myInput" placeholder="Champion"/>
+              </div>
+              <input type="submit">
+            </form>
+          </div>
+        </div>
     </div>
   </body>
 </html>
