all 5 roles done

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="col-sm-12">
                 <h1 class="display-6 text-center">Just check the chart.</h1>
             </div>
-          </div>
-          <div class="row">
+        </div>
+        <div class="row">
             <div class="col-sm-1 vert">
               <h1>TOP</h1>
             </div>
@@ -48,12 +48,68 @@
               </div>
             </div>
             <div class="col-sm-6">
-              <h3 class="counter_header">They counter: </h1>
+              <h3 class="counter_header">Beats: </h1>
                 <p id="counter_top"></p>
-              <h3 class="counter_header">Countered by: </h1>
+              <h3 class="counter_header">Loses to: </h1>
                 <p id="countered_top"></p>
             </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-1 vert">
+            <h1>JUNGLE</h1>
           </div>
+          <div class="col-sm-4 box">
+            <div class="col">
+                <div class="Jungle">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="jungle_button" aria-haspopup="true" aria-expanded="false">
+                      jungle
+                    </button>
+                    <ul class="dropdown-menu" id="input_jungle" aria-labelledby="ddmButton"></ul> 
+                  </div>
+                  <h4 class="role" id="role_jungle"></h4>
+                  <h5 class="good" id="good_jungle"></h5>
+                </div>
+            </div>
+            <div class="col">
+                <img id="image_jungle" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h3 class="counter_header">Beats: </h1>
+              <p id="counter_jungle"></p>
+            <h3 class="counter_header">Loses to: </h1>
+              <p id="countered_jungle"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-1 vert">
+            <h1>MID</h1>
+          </div>
+          <div class="col-sm-4 box">
+            <div class="col">
+                <div class="Mid">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="mid_button" aria-haspopup="true" aria-expanded="false">
+                      Mid
+                    </button>
+                    <ul class="dropdown-menu" id="input_mid" aria-labelledby="ddmButton"></ul> 
+                  </div>
+                  <h4 class="role" id="role_mid"></h4>
+                  <h5 class="good" id="good_mid"></h5>
+                </div>
+            </div>
+            <div class="col">
+                <img id="image_mid" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h3 class="counter_header">Beats: </h1>
+              <p id="counter_mid"></p>
+            <h3 class="counter_header">Loses to: </h1>
+              <p id="countered_mid"></p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-sm-1 vert">
             <h1>SUPPORT</h1>
@@ -76,10 +132,38 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <h3 class="counter_header">They counter: </h1>
+            <h3 class="counter_header">Beats: </h1>
               <p id="counter_support"></p>
-            <h3 class="counter_header">Countered by: </h1>
+            <h3 class="counter_header">Loses to: </h1>
               <p id="countered_support"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-1 vert">
+            <h1>ADC</h1>
+          </div>
+          <div class="col-sm-4 box">
+            <div class="col">
+                <div class="Adc">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="adc_button" aria-haspopup="true" aria-expanded="false">
+                      ADC
+                    </button>
+                    <ul class="dropdown-menu" id="input_adc" aria-labelledby="ddmButton"></ul> 
+                  </div>
+                  <h4 class="role" id="role_adc"></h4>
+                  <h5 class="good" id="good_adc"></h5>
+                </div>
+            </div>
+            <div class="col">
+                <img id="image_adc" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <h3 class="counter_header">Beats: </h1>
+              <p id="counter_adc"></p>
+            <h3 class="counter_header">Loses to: </h1>
+              <p id="countered_adc"></p>
           </div>
         </div>
     </div>
