added favicon and changed title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="config.js"></script>
     <script src="script.js"></script>
-    <title>Hello, world!</title>
+    <title>Check The Chart</title>
   </head>
   <body>
     <div class="container">
@@ -80,6 +80,9 @@
               <p id="counter_jungle"></p>
             <h3 class="counter_header">Loses to: </h1>
               <p id="countered_jungle"></p>
+          </div>
+          <div class="col-sm-1">
+            <button class="btn btn-primary">View Picks</button>
           </div>
         </div>
         <div class="row">
