final css changes before overhaul

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="display-6 text-center">Just check the chart.</h1>
+                <h1 class="display-3 text-center">Check The Chart</h1>
             </div>
         </div>
         <div class="row">
@@ -44,7 +44,7 @@
                   </div>
               </div>
               <div class="col">
-                  <img id="image_top" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+                  <img id="image_top" class="img-fluid rounded" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
               </div>
             </div>
             <div class="col-sm-6">
@@ -56,14 +56,14 @@
         </div>
         <div class="row">
           <div class="col-sm-1 vert">
-            <h1>JUNGLE</h1>
+            <h1>JGL</h1>
           </div>
           <div class="col-sm-4 box">
             <div class="col">
                 <div class="Jungle">
                   <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="jungle_button" aria-haspopup="true" aria-expanded="false">
-                      jungle
+                      Jungle
                     </button>
                     <ul class="dropdown-menu" id="input_jungle" aria-labelledby="ddmButton"></ul> 
                   </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="col">
-                <img id="image_jungle" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+                <img id="image_jungle" class="img-fluid rounded" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
             </div>
           </div>
           <div class="col-sm-6">
@@ -80,9 +80,6 @@
               <p id="counter_jungle"></p>
             <h3 class="counter_header">Loses to: </h1>
               <p id="countered_jungle"></p>
-          </div>
-          <div class="col-sm-1">
-            <button class="btn btn-primary">View Picks</button>
           </div>
         </div>
         <div class="row">
@@ -103,7 +100,7 @@
                 </div>
             </div>
             <div class="col">
-                <img id="image_mid" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+                <img id="image_mid" class="img-fluid rounded" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
             </div>
           </div>
           <div class="col-sm-6">
@@ -115,7 +112,7 @@
         </div>
         <div class="row">
           <div class="col-sm-1 vert">
-            <h1>SUPPORT</h1>
+            <h1>SUPP</h1>
           </div>
           <div class="col-sm-4 box">
             <div class="col">
@@ -131,7 +128,7 @@
                 </div>
             </div>
             <div class="col">
-                <img id="image_support" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+                <img id="image_support" class="img-fluid rounded" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
             </div>
           </div>
           <div class="col-sm-6">
@@ -159,7 +156,7 @@
                 </div>
             </div>
             <div class="col">
-                <img id="image_adc" class="img-fluid" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
+                <img id="image_adc" class="img-fluid rounded" src="https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-icons/-1.png">
             </div>
           </div>
           <div class="col-sm-6">
