added message list

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             </h3>
             <ul class="list-group">
               <li class="list-group-item">Siege is good against disuaders and towers. They also perform well against engage provided engage can be zoned from siegers.</li>
-              <li class="list-group-item">Split pushers are rather useless in teamfights. Their strength is in </li>
+              <li class="list-group-item">Split pushers are rather useless in teamfights. Their strength is in creating pressure in other lanes.</li>
+              <li class="list-group-item">Early pressure champions get outscaled by most, but can create an important early lead to snowball off of.</li>
             </ul>
           </div>
           <div class="col-sm-6">
@@ -58,7 +59,10 @@
           </div>
         </div>
         <div class="row">
-            <h1>helo</h1>
+            <div class="col-sm-12">
+              <h3>Messages:</h3>
+              <ul id="issue-list" class="list-group"></ul>
+            </div>
         </div>
       </div>
     </div>
