added some fancy stuff :)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <title>Check The Chart</title>
 </head>
 <body>
+  <img id="cursor" src="img/cursor.png">
   <div class="container-fluid">
     <div class="row page_header align-items-center">
       <div class="col-sm-2">
@@ -34,9 +35,10 @@
         </div>
       </div>
       <div class="col-sm-8">
-        <h1 class="display-3 text-center">Check The Chart</h1>
+        <h1 id="title" class="display-3 text-center">Check The Chart</h1>
       </div>
       <div class="col-sm-2">
+        <img id="isabelle" class="btn" style="width:50px;height:50px;padding:0px;" src="https://thumbs.gfycat.com/DenseHiddenDunnart-small.gif">
       </div>
     </div>
     <div class="row">
@@ -55,7 +57,7 @@
             </ul>
           </div>
           <div class="col-sm-6">
-            <img class="chart_img" src="chart.png">
+            <img class="chart_img" src="img/chart.png">
           </div>
         </div>
         <div class="row">
@@ -66,6 +68,9 @@
         </div>
       </div>
     </div>
+    <video id="vid" width="1280" height="720">
+      <source src="assets/dance.mp4" type="video/mp4">
+    </video>
   </div>
 </body>
 
